--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.1",
+    "@tanstack/react-query": "^5.62.14",
+    "ethers": "^6.13.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "viem": "^2.22.2",
+    "wagmi": "^2.14.6",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
