--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.1",
     "@tanstack/react-query": "^5.62.14",
+    "axios": "^1.7.9",
     "ethers": "^6.13.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
     "viem": "^2.22.2",
     "wagmi": "^2.14.6",
     "web3": "^4.16.0"
